dark mode slider fixed

--- a/src/main/webapp/static/css/profile.css
+++ b/src/main/webapp/static/css/profile.css
@@ -168,7 +168,7 @@ body.dark-mode .no-tweets {
 }
 
 .theme-toggle {
-    position: absolute;
+    position: relative;
     top: 20px;
     right: 20px;
     z-index: 10;
